--- a/analyse-student/src/main/resources/templates/common/_list_head.html
+++ b/analyse-student/src/main/resources/templates/common/_list_head.html
@@ -15,7 +15,8 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link href="/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="/css/font-awesome.min.css?v=4.4.0" rel="stylesheet">
-    <link href="/css/animate.min.css" rel="stylesheet">
     <link href="/css/style.min.css?v=4.0.0" rel="stylesheet">
+    <link href="/css/animate.min.css" rel="stylesheet">
     <link href="/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
+    <link href="/css/plugins/layer/laydate.css" rel="stylesheet">
 </head>
